--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\QSP\AppData\Local\Temp\testng-eclipse-1430228235\testng-customsuite.xml</span>
+                    <span>C:\Users\QSP\AppData\Local\Temp\testng-eclipse--499225597\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -102,7 +102,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="curdBDD.DeleteOperation" class="method navigator-link" hash-for-method="tc3">tc3</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="parameterization.GetOPeration" class="method navigator-link" hash-for-method="tc3">tc3</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,7 +120,7 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">curdBDD.DeleteOperation</span>
+              <span class="class-name">parameterization.GetOPeration</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
@@ -135,7 +135,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\QSP\AppData\Local\Temp\testng-eclipse-1430228235\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\QSP\AppData\Local\Temp\testng-eclipse--499225597\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +144,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;curdBDD.DeleteOperation&quot;/&gt;
+      &lt;class name=&quot;parameterization.GetOPeration&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -187,13 +187,13 @@ data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'tc3')
-data.setCell(0, 2, 'curdBDD.DeleteOperation')
-data.setCell(0, 3, 4208);
+data.setCell(0, 2, 'parameterization.GetOPeration')
+data.setCell(0, 3, 7947);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,7 +219,7 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">curdBDD.DeleteOperation</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">parameterization.GetOPeration</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">tc3</span>
                 <span class="method-start">0 ms</span>
