--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,14 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">7,058</td><td></td><td></td></tr>
+<tr><th colspan="7">Suite</th></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">6,756</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">validations.Test4</td><td><a href="#m0">tc1</a></td><td rowspan="1">1626362165488</td><td rowspan="1">6916</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">curdBDD.DeleteOperation</td><td><a href="#m0">tc3</a></td><td rowspan="1">1626364471327</td><td rowspan="1">71</td></tr><tr class="passedodd"><td rowspan="1">curdBDD.GetOpertaion</td><td><a href="#m1">tc1</a></td><td rowspan="1">1626364464744</td><td rowspan="1">5378</td></tr><tr class="passedeven"><td rowspan="1">curdBDD.PostOperation</td><td><a href="#m2">tc3</a></td><td rowspan="1">1626364470139</td><td rowspan="1">1099</td></tr><tr class="passedodd"><td rowspan="1">curdBDD.UpdateOperation</td><td><a href="#m3">tc3</a></td><td rowspan="1">1626364471241</td><td rowspan="1">83</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">validations.Test4#tc1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">curdBDD.DeleteOperation#tc3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">curdBDD.GetOpertaion#tc1</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">curdBDD.PostOperation#tc3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">curdBDD.UpdateOperation#tc3</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
